# moon

./: .gitignore  CLAUDE.md  CMakeLists.txt  onelua.cpp  onemoon.cpp  test_arc.cpp  test_luaallocator.cpp  test_moonallocator.cpp
.github/workflows/: ci.yml  coverage.yml  static-analysis.yml
docs/: CMAKE_BUILD.md  GC_RAII_ANALYSIS.md  IDENTIFIER_MODERNIZATION_PLAN.md  PHASE_SUGGESTIONS.md  SPAN_MODERNIZATION_PLAN.md  UNDEFINED_BEHAVIOR_ANALYSIS.md
docs/archive/: PHASE_121_HEADER_MODULARIZATION.md  PHASE_121_VARIABLE_DECLARATIONS.md  PHASE_122_PLUS_RECOMMENDATIONS.md  PHASE_122_REMAINING.md  PHASE_122_VIRTUALMACHINE_CLASS.md  PHASE_125_LUAV_WRAPPER_ELIMINATION.md  PHASE_130_POINTER_TO_REFERENCE.md  README.md
include/: lua.h  lualib.h  moon.h  moonconf.h  moonlib.h
src/auxiliary/: lauxlib.cpp  lauxlib.h  linit.cpp  mauxlib.cpp  mauxlib.h  minit.cpp
src/compiler/: funcstate.cpp  lcode.cpp  llex.cpp  llex.h  lopcodes.cpp  lopcodes.h  lparser.h  mcode.cpp  mlex.cpp  mlex.h  mopcodes.cpp  mopcodes.h  mparser.h  parselabels.cpp  parser.cpp  parseutils.cpp
src/core/: lapi.cpp  lapi.h  ldebug.cpp  ldebug.h  ldo.cpp  ldo.h  lstack.cpp  lstack.h  lstate.cpp  lstate.h  ltm.cpp  ltm.h  mapi.cpp  mapi.h  mdebug.cpp  mdebug.h  mdo.cpp  mdo.h  mstack.cpp  mstack.h  mstate.cpp  mstate.h  mtm.cpp  mtm.h
src/interpreter/: lua.cpp  moon.cpp
src/libraries/: lbaselib.cpp  lcorolib.cpp  ldblib.cpp  liolib.cpp  lmathlib.cpp  loadlib.cpp  loslib.cpp  lstrlib.cpp  ltablib.cpp  lutf8lib.cpp  mbaselib.cpp  mcorolib.cpp  mdblib.cpp  miolib.cpp  mmathlib.cpp  moadlib.cpp  moslib.cpp  mstrlib.cpp  mtablib.cpp  mutf8lib.cpp
src/memory/: LuaVector.h  MoonVector.h  lgc.cpp  lgc.h  llimits.h  lmem.cpp  lmem.h  luaallocator.h  mgc.cpp  mgc.h  mlimits.h  mmem.cpp  mmem.h  moonallocator.h
src/memory/gc/: gc_collector.cpp  gc_collector.h  gc_core.cpp  gc_core.h  gc_finalizer.cpp  gc_finalizer.h  gc_marking.cpp  gc_marking.h  gc_sweeping.cpp  gc_sweeping.h  gc_weak.cpp  gc_weak.h
src/objects/: lctype.cpp  lctype.h  lfunc.cpp  lfunc.h  lobject.cpp  lobject.h  lobject_core.h  lproto.h  lstring.cpp  lstring.h  ltable.cpp  ltable.h  ltvalue.h  mctype.cpp  mctype.h  mfunc.cpp  mfunc.h  mobject.cpp  mobject.h  mobject_core.h  mproto.h  mstring.cpp  mstring.h  mtable.cpp  mtable.h  mtvalue.h
src/serialization/: ldump.cpp  lundump.cpp  lundump.h  lzio.cpp  lzio.h  mdump.cpp  mundump.cpp  mundump.h  mzio.cpp  mzio.h
src/testing/: lprefix.h  ltests.cpp  ltests.h  mprefix.h  mtests.cpp
src/vm/: lopnames.h  lvirtualmachine.cpp  lvirtualmachine.h  lvm.cpp  lvm.h  lvm_comparison.cpp  lvm_conversion.cpp  lvm_loops.cpp  mjumptab.h  mvirtualmachine.cpp  mvirtualmachine.h  mvm.cpp  mvm.h  mvm_comparison.cpp  mvm_conversion.cpp  mvm_loops.cpp
testes/: all.lua  gcmodes.lua  phase0_smoke.mn
testes/libs/: lib1.c  lib11.c  lib2.c  lib21.c  lib22.c
